CPU cores limit

--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -4,6 +4,12 @@
 # They will overwrite the defaults!                        #
 ############################################################
 
+#### THREADS ####
+
+# Number of CPU Cores
+burst.cpuCores=4
+
+
 #### PEER NETWORKING ####
 
 # Announce my IP address/hostname to peers and allow them to share it with other peers.
