All thread jobs converted to thread core jobs

--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -9,6 +9,13 @@
 # Number of CPU Cores
 burst.cpuCores=2
 
+#### WEBSOCKETS ####
+
+# Use WebSocket connection if supported by the remote peer.
+nxt.useWebSockets=true
+
+# Use WebSockets and HTTP connection with websocket priority.
+nxt.useBothWebSocketsAndHttp=true
 
 #### PEER NETWORKING ####
 
@@ -53,12 +60,6 @@ nxt.testnetPeers=
 
 # Maintain active connections with at least that many peers.
 nxt.maxNumberOfConnectedPublicPeers=20
-
-# Use WebSocket connection if supported by the remote peer.
-nxt.useWebSockets=true
-
-# Use WebSockets and HTTP connection with websocket priority.
-nxt.useBothWebSocketsAndHttp=true
 
 # WebSocket connection idle timeout (milliseconds).
 nxt.webSocketIdleTimeout=900000
