Connection option in UI and API(getPeer)

--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -6,8 +6,8 @@
 
 #### THREADS ####
 
-# Number of CPU Cores
-burst.cpuCores=2
+# Number of CPU Cores (Default cores: total Cores - 2)
+# burst.cpuCores=4
 
 #### WEBSOCKETS ####
 
